Thu Mar 19 16:40:47 PST 1998 Shawn T. Amundson <amundson@gimp.org>

        * Released GTK+ 0.99.8

Thu Mar 19 16:28:48 CST 1998 Shawn T. Amundson <amundson@gimp.org>

        * the Solaris ltconfig patch from draco

Wed Mar 18 17:03:02 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkcolorsel.c: #define M_PI if it isn't already
	* gtk/testgtk.c: initialize transparent properly, to make purify
	happy

Thu Mar 19 00:37:44 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_construct): perform the
 	neccessary checks on funtion begin. use the scrolled_window that got
	passed to this function, and not a new one.

Wed Mar 18 11:09:10 1998  Owen Taylor  <owt1@cornell.edu>
	( From: James Henstridge <james@daa.com.au> )

	* gtk/gtkclist.c: Don't remove, then destroy labels in
	  gtk_clist_set_column_[*], just remove them.
	
	* gtk/gtkmain.c (gtk_invoke_timeout_function): call
	  marshal when appropriate, not function.

Tue Mar 17 14:15:07 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/testgtk.c (create_main_window): Alphabetize tests

	* gtk/gtk[hv]paned.c: Change division on resize if
	  necessary to keep handle visible.

	* gtk/gtkgamma.c gtk/gtkcurve.c: Moved initialization into 
	  _init() functions.

	* gtk/gtkscrolledwindow.c: Added missing _construct()
	  functions.

Wed Mar 18 17:38:25 CET 1998	Paolo Molaro <lupus@debian.org>

	* gtk/gtkentry.[ch]: checked in gtk_entry_set_max_length
	(it truncates the texts if it's longer, now)

Wed Mar 18 02:06:52 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcontainer.c (gtk_container_border_width): use the resize queue.

	* gtk/gtkwindow.c (gtk_window_set_arg): gtk_window_set_hints() after
 	setting certain arguments, so they actually take affect.
	(gtk_window_set_policy): likewise.

Tue Mar 17 22:45:39 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_get_arg): return real boolean values
	not just numbers.

	* gtk/gtktogglebutton.c (gtk_toggle_button_set_state): check