@@ -1,3 +1,14 @@
+Fri Mar 20 20:49:33 1998  Radek Doulik  <rodo@aquarius>
+
+	* gtk/gtktoolbar.c (gtk_toolbar_insert_element): changed packing
+	in toolbar elements, so texts are always at the bottom
+
+Wed Mar 18 01:07:11 1998  Radek Doulik  <rodo@aquarius>
+
+	* gtk/gtkclist.c (gtk_clist_column_titles_show): test if
+	clist->title_window exists before showing it,
+	gtk_clist_column_titles_hide also fixed
+
 Thu Mar 19 16:40:47 PST 1998 Shawn T. Amundson <amundson@gimp.org>
 
         * Released GTK+ 0.99.8
